# bazel_cmake_xcodeproj_demo

./: BUILD  MODULE.bazel  README.md  WORKSPACE
Sources/: AppDelegate.m  main.m
profiles/: BUILD
