module(
    name = "cmake_bazel_demo",
    version = "1.0",
)

bazel_dep(name = "rules_apple", version = "3.1.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "apple_support", version = "1.11.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_xcodeproj", version = "1.13.0")
